--- a/aso_apunts/systemd.tex
+++ b/aso_apunts/systemd.tex
@@ -38,6 +38,7 @@ Les unitats poden ser serveis, punts de muntatge, dispositius, sockets. Els tipu
 	\bibitem{SYSTEMD_INTRO} \url{https://www.linux.com/learn/here-we-go-again-another-linux-init-intro-systemd}
 	\bibitem{SYSTEMD_COMMANDS} \url{https://www.linux.com/learn/intro-systemd-runlevels-and-service-management-commands}
 	\bibitem{SYSTEMD_UNDERSTANDING} \url{https://www.linux.com/learn/understanding-and-using-systemd}
+	\bibitem{Monitoring}\url{https://www.linux.com/learn/linux-system-monitoring-and-more-auditd}
 		
 
 	
