Quitar el marcado en los enlaces

--- a/aso_apunts/apache/apache.tex
+++ b/aso_apunts/apache/apache.tex
@@ -7,7 +7,7 @@
 \usepackage[catalan]{babel}
 \usepackage[obeyspaces]{url}
 \usepackage{comment}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage[pdftex]{graphicx}
 \usepackage{longtable}
 %\setlength{\parindent}{5pt}
