--- a/aso_apunts/ssh/remote_admin_tools.tex
+++ b/aso_apunts/ssh/remote_admin_tools.tex
@@ -47,6 +47,8 @@ Per treballar amb synctool hem de fer-ho per ssh sense password. O sigui, del no
 
 % TODO crear mòduls de puppet. En forge.puppetlabs.com hi ha un apartat 
 
+Puppet permet la instal·lació i configuració de sistemes de manera remota i automatitzada. Per exemple, en un \textit{clúster} de servidors virtuals, si has d'aixecar nous servidors degut a la demanda de treball, el que es pot fer amb \textit{Puppet} \'{e}s aixecar màquines virtuals netes i Puppet te les prepara de manera exactament igual amb els serveis i configuracions necessàries.
+
 \subsection{Instal·lació}
 Ens hem de baixar la versió depenent de la nostra distribució:
 \begin{verbatim}
