--- a/aso_apunts/ssh/ssh.tex
+++ b/aso_apunts/ssh/ssh.tex
@@ -63,6 +63,7 @@
 	\bibitem{WIKI_ES_GNUSCN} \url{https://es.wikipedia.org/wiki/GNU_Screen}
 	\bibitem[]{BLOG_GNUSCN} \url{https://phenobarbital.wordpress.com/2013/02/18/linux-usando-gnu-screen/}
 		% Exemple url: \bibitem{Debian} \url{https://wiki.debian.org/es}%
+	\bibitem{LINUX_COM}\url{https://www.linux.com/learn/5-ssh-hardening-tips}
 \end{thebibliography}
 
 \end{document}
