--- a/aso_apunts/systemd/systemd.tex
+++ b/aso_apunts/systemd/systemd.tex
@@ -39,7 +39,7 @@ Les unitats poden ser serveis, punts de muntatge, dispositius, sockets. Els tipu
 	\bibitem{SYSTEMD_COMMANDS} \url{https://www.linux.com/learn/intro-systemd-runlevels-and-service-management-commands}
 	\bibitem{SYSTEMD_UNDERSTANDING} \url{https://www.linux.com/learn/understanding-and-using-systemd}
 	\bibitem{Monitoring}\url{https://www.linux.com/learn/linux-system-monitoring-and-more-auditd}
-		
+	\bibitem{Tools}\url{https://www.linux.com/learn/5-systemd-tools-you-should-start-using-now}	
 
 	
 \end{thebibliography}
